_layouts/default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,12 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="{{ site.github.repository_url }}">GitHub</a></li>
-          <li><a href="https://github.com/Tomas-Morph/coordination">coordination</a></li>
+          <li class="fork"><a href="{{ site.github.repository_url }}">repo</a></li>
           <li><a href="https://github.com/Tomas-Morph/articles">articles</a></li>
           <li><a href="https://github.com/Tomas-Morph/software">software</a></li>
           <li><a href="https://github.com/Tomas-Morph/references">references</a></li>
           <!--
+          <li><a href="https://github.com/Tomas-Morph/coordination">coordination</a></li>
           <li><a href="https://github.com/Tomas-Morph/journal_ecj_healthy_menu_2018">journal_ecj_healthy_menu_2018</a></li>
           <li><a href="https://github.com/Tomas-Morph/software-menu-planning-app-qt">software-menu-planning-app-qt</a></li>
           <li><a href="https://github.com/Tomas-Morph/software-menu-planning-app">software-menu-planning-app</a></li>
@@ -51,8 +51,8 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">&mdash; PAL <a href="https://pal-ull.github.io">PAL</a></span>
+          <span class="credits left">GitHub ORG <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
+          <span class="credits right">&mdash; Parallel Algorithms and Languages <a href="https://pal-ull.github.io">PAL</a></span>
         </div>
 
         {{ content }}
